2008-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Fix title usage in defAuthProc

2008-02-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.man: Increment version to 1.5 and document.
	* autoproxy.tcl: Fixed architectural problems that prevented the
	http registered command from having tls package options
	appended. This makes an incompatible change to the tls_connect
	command and the host and port must now be the last two options.
	* autoproxy.tcl: Re-organised the tls_connect code to split out
	the connect and the tls parts to create a tunnel_connect command
	that can form a non-SSL tunnel through a proxy.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* autoproxy.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2007-03-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Removed even the demo reference to BWidgets to
	avoid confising the auto-dependency checker. Rearranged the tls
	connection code to permit use outside of the http package as
	tls_connect.
	* autoproxy.man: Documented the tls functions.
	* pkgIndex.tcl: Increment version to 1.4

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* autoproxy.man: Bumped version to 1.3
	* autoproxy.tcl:
	* pkgIndex.tcl:

2006-04-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Added a tls_socket procedure that can use
	                 registered as the protocol handler for https
	                 with the core http package and will do the right
	                 thing when a proxy is in use.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*