@@ -1,9 +1,9 @@
-[manpage_begin autoproxy n 1.3]
+[manpage_begin autoproxy n 1.5.1]
 [moddesc   {HTTP protocol helper modules}]
 [titledesc {Automatic HTTP proxy usage and authentication}]
 [require Tcl 8.2]
 [require http [opt 2.0]]
-[require autoproxy [opt 1.5]]
+[require autoproxy [opt 1.5.1]]
 [description]
 [para]
 
